Update Swagger and Reformat Code
