# src/main/resources/static/openapi.json
@@ -8,15 +8,20 @@
   "servers": [
     {
       "url": "https://lr-aluraflix.herokuapp.com"
+    },
+    {
+      "url": "https://localhost:8080"
     }
   ],
   "paths": {
     "/api/videos/{id}": {
       "get": {
         "description": "Get Video By ID",
-        "security": [{
-          "BearerUserAuth": []  
-        }],
+        "security": [
+          {
+            "BearerUserAuth": []
+          }
+        ],
         "tags": [
           "video-controller"
         ],
@@ -46,7 +51,7 @@
           "400": {
             "description": "Error: Bad Request",
             "content": {
-               "application/json": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/MessageResponseNotFound"
                 }
@@ -67,9 +72,11 @@
       },
       "put": {
         "description": "Update Video By ID",
-        "security": [{
-          "BearerUserAuth": []  
-        }],
+        "security": [
+          {
+            "BearerUserAuth": []
+          }
+        ],
         "tags": [
           "video-controller"
         ],
@@ -109,7 +116,7 @@
           "400": {
             "description": "Error: Bad Request",
             "content": {
-               "application/json": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/MessageResponseNotFound"
                 }
@@ -130,9 +137,11 @@
       },
       "delete": {
         "description": "Delete Video By ID",
-        "security": [{
-          "BearerUserAuth": []  
-        }],
+        "security": [
+          {
+            "BearerUserAuth": []
+          }
+        ],
         "tags": [
           "video-controller"
         ],
@@ -154,7 +163,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref":  "#/components/schemas/MessageResponseSuccess"
+                  "$ref": "#/components/schemas/MessageResponseSuccess"
                 }
               }
             }
@@ -162,7 +171,7 @@
           "400": {
             "description": "Error: Bad Request",
             "content": {
-               "application/json": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/MessageResponseNotFound"
                 }
@@ -185,9 +194,11 @@
     "/api/categories/{id}": {
       "get": {
         "description": "Get Category By ID",
-        "security": [{
-          "BearerUserAuth": []  
-        }],
+        "security": [
+          {
+            "BearerUserAuth": []
+          }
+        ],
         "tags": [
           "category-controller"
         ],
@@ -217,7 +228,7 @@
           "400": {
             "description": "Error: Bad Request",
             "content": {
-               "application/json": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/MessageResponseNotFound"
                 }
@@ -238,9 +249,11 @@
       },
       "put": {
         "description": "Update Category By ID",
-        "security": [{
-          "BearerUserAuth": []  
-        }],
+        "security": [
+          {
+            "BearerUserAuth": []
+          }
+        ],
         "tags": [
           "category-controller"
         ],
@@ -280,7 +293,7 @@
           "400": {
             "description": "Error: Bad Request",
             "content": {
-               "application/json": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/MessageResponseNotFound"
                 }
@@ -301,9 +314,11 @@
       },
       "delete": {
         "description": "Delete Category By ID",
-        "security": [{
-          "BearerUserAuth": []  
-        }],
+        "security": [
+          {
+            "BearerUserAuth": []
+          }
+        ],
         "tags": [
           "category-controller"
         ],
@@ -325,7 +340,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref":  "#/components/schemas/MessageResponseSuccess"
+                  "$ref": "#/components/schemas/MessageResponseSuccess"
                 }
               }
             }
@@ -333,7 +348,7 @@
           "400": {
             "description": "Error: Bad Request",
             "content": {
-               "application/json": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/MessageResponseNotFound"
                 }
@@ -376,7 +391,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref":  "#/components/schemas/MessageResponseSuccess"
+                  "$ref": "#/components/schemas/MessageResponseSuccess"
                 }
               }
             }
@@ -418,9 +433,11 @@
     "/api/videos": {
       "get": {
         "description": "Get All Videos or Search For a Video",
-        "security": [{
-          "BearerUserAuth": []  
-        }],
+        "security": [
+          {
+            "BearerUserAuth": []
+          }
+        ],
         "tags": [
           "video-controller"
         ],
@@ -461,7 +478,7 @@
           "400": {
             "description": "Error: Bad Request",
             "content": {
-               "application/json": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/MessageResponseNotFound"
                 }
@@ -482,9 +499,11 @@
       },
       "post": {
         "description": "Insert New Video",
-        "security": [{
-          "BearerUserAuth": []  
-        }],
+        "security": [
+          {
+            "BearerUserAuth": []
+          }
+        ],
         "tags": [
           "video-controller"
         ],
@@ -526,9 +545,11 @@
     "/api/categories": {
       "get": {
         "description": "Get All Categories",
-        "security": [{
-          "BearerUserAuth": []  
-        }],
+        "security": [
+          {
+            "BearerUserAuth": []
+          }
+        ],
         "tags": [
           "category-controller"
         ],
@@ -561,7 +582,7 @@
           "400": {
             "description": "Error: Bad Request",
             "content": {
-               "application/json": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/MessageResponseNotFound"
                 }
@@ -582,9 +603,11 @@
       },
       "post": {
         "description": "Insert New Category",
-        "security": [{
-          "BearerUserAuth": []  
-        }],
+        "security": [
+          {
+            "BearerUserAuth": []
+          }
+        ],
         "tags": [
           "category-controller"
         ],
@@ -626,9 +649,11 @@
     "/api/admin/signup": {
       "post": {
         "description": "Register New Administrator User",
-        "security": [{
-          "BearerAdminAuth": []  
-        }],
+        "security": [
+          {
+            "BearerAdminAuth": []
+          }
+        ],
         "tags": [
           "admin-controller"
         ],
@@ -649,7 +674,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref":  "#/components/schemas/MessageResponseSuccess"
+                  "$ref": "#/components/schemas/MessageResponseSuccess"
                 }
               }
             }
@@ -693,7 +718,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/VideoResponse" 
+                    "$ref": "#/components/schemas/VideoResponse"
                   }
                 }
               }
@@ -705,9 +730,11 @@
     "/api/categories/{categoryId}/videos": {
       "get": {
         "description": "Get All Videos By Category",
-        "security": [{
-          "BearerUserAuth": []  
-        }],
+        "security": [
+          {
+            "BearerUserAuth": []
+          }
+        ],
         "tags": [
           "category-controller"
         ],
@@ -740,7 +767,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref":  "#/components/schemas/VideoResponse"
+                    "$ref": "#/components/schemas/VideoResponse"
                   }
                 }
               }
@@ -749,7 +776,7 @@
           "400": {
             "description": "Error: Bad Request",
             "content": {
-               "application/json": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/MessageResponseNotFound"
                 }
@@ -772,9 +799,11 @@
     "/api/admin/users": {
       "get": {
         "description": "Get All Users",
-        "security": [{
-          "BearerAdminAuth": []  
-        }],
+        "security": [
+          {
+            "BearerAdminAuth": []
+          }
+        ],
         "tags": [
           "admin-controller"
         ],
@@ -798,7 +827,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref":  "#/components/schemas/UserResponse"
+                    "$ref": "#/components/schemas/UserResponse"
                   }
                 }
               }
@@ -807,7 +836,7 @@
           "400": {
             "description": "Error: Bad Request",
             "content": {
-               "application/json": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/MessageResponseNotFound"
                 }
@@ -830,9 +859,11 @@
     "/api/admin/users/{username}": {
       "get": {
         "description": "Get User By Username",
-        "security": [{
-          "BearerAdminAuth": []  
-        }],
+        "security": [
+          {
+            "BearerAdminAuth": []
+          }
+        ],
         "tags": [
           "admin-controller"
         ],
@@ -861,7 +892,7 @@
           "400": {
             "description": "Error: Bad Request",
             "content": {
-               "application/json": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/MessageResponseNotFound"
                 }
@@ -882,9 +913,11 @@
       },
       "delete": {
         "description": "Delete User By Username",
-        "security": [{
-          "BearerAdminAuth": []  
-        }],
+        "security": [
+          {
+            "BearerAdminAuth": []
+          }
+        ],
         "tags": [
           "admin-controller"
         ],
@@ -905,7 +938,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref":  "#/components/schemas/MessageResponseSuccess"
+                  "$ref": "#/components/schemas/MessageResponseSuccess"
                 }
               }
             }
@@ -913,7 +946,7 @@
           "400": {
             "description": "Error: Bad Request",
             "content": {
-               "application/json": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/MessageResponseNotFound"
                 }
@@ -1101,7 +1134,7 @@
           }
         }
       },
-      "LoginResponse":{
+      "LoginResponse": {
         "type": "object",
         "properties": {
           "token": {
